add AI Editor API with resume processing and error handling
- Implemented an Express server to handle AI Editor requests.
- Added endpoint for health check and AI resume editing.
- Integrated Google Generative AI for processing resume commands.
- Introduced request validation and error handling for API responses.
- Configured Vite server to proxy API requests to the Express server.
- Created client-side API functions for sending requests to the AI Editor.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@
 VITE_ENABLE_GEMINI=false
 
 VITE_GOOGLE_API_KEY=
+
+# --- Backend AI Editor (recommended) ---
+# Run the local API server via: `node server/index.mjs`
+ENABLE_GEMINI=false
+GOOGLE_API_KEY=
+AI_EDITOR_PORT=5174
